trunk/Archive2/87/0243b31330b17b/output
main.cpp:6:5: error: expected primary-expression before 'int'
     int variable*;
     ^
main.cpp:6:5: error: expected '}' before 'int'
main.cpp:6:5: error: expected ',' or ';' before 'int'
main.cpp:7:1: error: expected declaration before '}' token
 };
 ^
